--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@
 
 VIE_TAGE=dev
 
-VITE_TESLO_API_URL=http://192.168.1.106:3000/api
+# VITE_TESLO_API_URL=http://192.168.1.106:3000/api
+VITE_TESLO_API_URL=https://vue-nest-teslo-ts.up.railway.app/api
